--- a/src/content/css/login.css
+++ b/src/content/css/login.css
@@ -11,6 +11,7 @@ html, body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     direction: rtl;
+    
 }
 
 body {
@@ -217,3 +218,41 @@ div#root{
         max-width: 115px;
     }
  
+    .r-login__company{
+        position: absolute;
+        left: 50px;
+        bottom:20px;
+        color: #fff;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    .r-login__company-title{
+        font-size: 40px;
+        font-weight: 500;
+        margin-bottom: 10px
+    }
+    .r-login__company-ver{
+        font-size: 13px;
+        margin-bottom: 10px
+    }
+    .r-login__company-date{
+        font-size: 13px;
+    }
+
+    @media(max-width:768px){
+        .r-login{
+            flex-direction: column;
+            justify-content: center;
+            background: #25AAE1;
+        }
+        .r-login__wrapper{
+            margin-top: 0;
+            margin-bottom: 0;
+
+        }
+        .r-login__company{
+            position: relative;
+            left: unset;
+            bottom: unset;
+        }
+    }
