--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -34233,6 +34233,7 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
     height: 250px;
     font: 500 14px/14px arial normal;
     transform: rotate(90deg) translateX(-50%);
+    -webkit-backface-visibility: hidden;
 }
 
     .radialnav .ellipsis {
@@ -34246,7 +34247,7 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
         border-bottom-left-radius: 90px;
         border-top-left-radius: 90px;
         background: #fdfdfd;
-        /* background-image: url(fast-btn-toggle-icon.svg); */
+        background-image: url(../images/fast-btn-toggle-icon.svg);
         background-size: 50px;
         background-position: left center;
         background-repeat: no-repeat;
@@ -34277,6 +34278,7 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
     .radialnav.active .menu {
         pointer-events: auto;
         transform: scale(1);
+        -webkit-transform-origin: 50%  51%;
     }
 
 .menu {
@@ -34331,10 +34333,10 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
 
         .menu > li a {
             position: absolute;
-            right: -148px;
+            right: -175px;
             display: block;
-            height: 11em;
-            width: 11em;
+            height: 300px;
+            width: 300px;
             border-radius: 50%;
             text-decoration: none;
             color: #fff;
@@ -34343,6 +34345,7 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
             font-size: 1.18em;
             transform: skew(-66deg) rotate(-75deg) scale(1);
             -webkit-backface-visibility: hidden;
+            -webkit-transform-origin: 50%  51%;
             -webkit-transition: opacity 0.3s, color 0.3s;
             -moz-transition: opacity 0.3s, color 0.3s;
             transition: opacity 0.3s, color 0.3s;
@@ -34359,12 +34362,19 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
                     }*/
 
             .menu > li a i {
-                width: 20px;
-                height: 20px;
+                width: 15px;
+                height: 15px;
                 background-position: center;
                 background-repeat: no-repeat;
                 display: inline-block;
                 cursor: pointer;
+                
+    zoom: 1.7;
+    -webkit-backface-visibility: hidden;
+            -webkit-transform-origin: 50%  51%;
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);
+    transform: translateZ(0);
+    -webkit-font-smoothing: antialiased;
             }
 
 
@@ -34376,8 +34386,8 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
 
             .menu > li:nth-of-type(1) a i {
                 transform: rotate(-15deg);
-                margin-top: 15px;
-                margin-right: 15px;
+                margin-top: 7px;
+                margin-right: 13px;
             }
 
         .menu > li:nth-of-type(2) {
@@ -34386,8 +34396,8 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
 
             .menu > li:nth-of-type(2) a i {
                 transform: rotate(-42deg);
-                margin-top: 15px;
-                margin-right: 15px;
+                margin-top: 7px;
+                margin-right: 13px;
             }
 
         .menu > li:nth-of-type(3) {
@@ -34396,8 +34406,8 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
 
             .menu > li:nth-of-type(3) a i {
                 transform: rotate(-68deg);
-                margin-top: 15px;
-                margin-right: 15px;
+                margin-top: 7px;
+                margin-right: 13px;
             }
 
         .menu > li:nth-of-type(4) {
@@ -34406,8 +34416,8 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
 
             .menu > li:nth-of-type(4) a i {
                 transform: rotate(-93deg);
-                margin-top: 15px;
-                margin-right: 15px;
+                margin-top: 7px;
+                margin-right: 13px;
             }
 
         .menu > li:nth-of-type(5) {
@@ -34416,8 +34426,8 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
 
             .menu > li:nth-of-type(5) a i {
                 transform: rotate(-118deg);
-                margin-top: 15px;
-                margin-right: 15px;
+                margin-top: 7px;
+                margin-right: 13px;
             }
 
         .menu > li:nth-of-type(6) {
@@ -34426,8 +34436,8 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
 
             .menu > li:nth-of-type(6) a i {
                 transform: rotate(-145deg);
-                margin-top: 15px;
-                margin-right: 15px;
+                margin-top: 7px;
+                margin-right: 13px;
             }
 
         .menu > li:nth-of-type(7) {
@@ -34436,8 +34446,8 @@ background-image: url(../images/modal-filter/done-work-icon.svg);
 
             .menu > li:nth-of-type(7) a i {
                 transform: rotate(-172deg);
-                margin-top: 15px;
-                margin-right: 15px;
+                margin-top: 7px;
+                margin-right: 13px;
             }
 
 i.icon {
@@ -34605,6 +34615,7 @@ i.icon {
             color: #818181;
             padding: 5px;
             text-decoration: none;
+            cursor: pointer;
         }
 
             .r-main-box__ribbon .tab-content .tab-panel .tab-group-content a i {
