--- a/src/content/css/orgChart.css
+++ b/src/content/css/orgChart.css
@@ -1,16 +1,6 @@
 
-html, body {
+#root #react-org-chart {
     margin: 0;
-    height: 100%;
-    width: 100%;
-    font-size: 12px;
-    font-family: "SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-smoothing: antialiased;
-    -webkit-font-smoothing: antialiased;
-}
-#root, #react-org-chart {
-    margin: 0;
-    cursor: move;
     height: 100%;
     width: 100%;
 
