--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -9285,6 +9285,11 @@ ul .submenu input {
     border-radius: 20px;
 }
 
+.r-modal .switch-state:before {
+    background-color: #3d6cf7;
+    color:#fff;
+}
+
 .icon-state .switch-state:after {
     content: "\efb8";
     font-family: IcoFont;
@@ -34366,6 +34371,10 @@ i.icon {
     border-bottom: 2px solid #f7931e;
     transition: display .3s ease;
 }
+.r-modal .r-main-box__ribbon .tab-content {
+    border-bottom-color: #ff0000;
+}
+
 
 .r-main-box__ribbon .tab-content .gradient {
     height: 40px;
@@ -34594,6 +34603,19 @@ i.icon {
     background: linear-gradient(to bottom, rgba(27, 37, 92, 1) 0%, rgba(53, 72, 179, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1b255c', endColorstr='#3548b3', GradientType=0);
 }
+.r-modal .r-main-box__toggle .switch-state {
+    background: rgb(158,158,158);
+background: -moz-linear-gradient(top, rgba(158,158,158,1) 0%, rgba(206,206,206,1) 100%);
+background: -webkit-linear-gradient(top, rgba(158,158,158,1) 0%,rgba(206,206,206,1) 100%);
+background: linear-gradient(to bottom, rgba(158,158,158,1) 0%,rgba(206,206,206,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e9e9e', endColorstr='#cecece',GradientType=0 );
+}
+.r-modal .r-main-box__toggle .switch input:checked+.switch-state {
+    background: rgb(158,158,158);
+background: -moz-linear-gradient(top, rgba(158,158,158,1) 0%, rgba(206,206,206,1) 100%);
+background: -webkit-linear-gradient(top, rgba(158,158,158,1) 0%,rgba(206,206,206,1) 100%);
+background: linear-gradient(to bottom, rgba(158,158,158,1) 0%,rgba(206,206,206,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e9e9e', endColorstr='#cecece',GradientType=0 );}
 
 .r-main-box__toggle .switch-state:before {
     content: "|";
@@ -34624,6 +34646,15 @@ i.icon {
     height: 20px;
     width: 20px;
     background: url(../images/Ribbon/shortkey-setting.svg) no-repeat center center;
+    background-size: 20px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.r-modal .r-main-box__controlpanel--action {
+    height: 20px;
+    width: 20px;
+    background: url(../images/Ribbon/shortkey-setting-blue.svg) no-repeat center center;
     background-size: 20px;
     display: inline-block;
     cursor: pointer;
