--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -1,6 +1,4 @@
 @import url(iransans.css);
-
-
 html {
     font: 14px;
 }
@@ -19,8 +17,7 @@ body {
     width: 100%;
 }
 
-
-@media (min-width:1009px) {
+@media (min-width:992px) {
     body {
         overflow-x: hidden;
     }
@@ -28,7 +25,8 @@ body {
 
 body:after {
     content: "";
-    position: absolute;
+    position: fixed;
+    background-attachment: fixed;
     left: 0;
     bottom: 0;
     width: 600px;
@@ -40,7 +38,8 @@ body:after {
 
 body:before {
     content: "";
-    position: absolute;
+    position: fixed;
+    background-attachment: fixed;
     right: 0;
     top: 0;
     width: 650px;
@@ -49,8 +48,9 @@ body:before {
     background-size: cover;
     z-index: -1;
 }
+
 .container, .container-fluid {
-    min-width: 1009px!important;
+    min-width: 992px!important;
     max-width: 1676px!important;
 }
 
@@ -7736,7 +7736,7 @@ ul .submenu input {
     border-radius: 10px;
 }
 
-.dashboard-wrap .row .col-xl-3:first-child {
+.dashboard-wrap .row .col-3:first-child {
     padding-right: 45px;
 }
 
@@ -9287,7 +9287,7 @@ ul .submenu input {
 
 .r-modal .switch-state:before {
     background-color: #3d6cf7;
-    color:#fff;
+    color: #fff;
 }
 
 .icon-state .switch-state:after {
@@ -29338,8 +29338,8 @@ body .page-wrapper .page-body-wrapper .page-sidebar.native-image-bg .sidebar-use
 }
 
 .rtl .page-wrapper .sidebar-close .page-sidebar {
-    -webkit-transform: translate(300px);
-    transform: translate(300px);
+    -webkit-transform: translate(100%);
+    transform: translate(100%);
 }
 
 @media only screen and (max-width: 1199px) {
@@ -34042,6 +34042,19 @@ body .page-wrapper .page-body-wrapper .page-sidebar.native-image-bg .sidebar-use
     border-radius: 30px;
 }
 
+.r-main-box:after {
+    width: 90%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 60px;
+    top: 100%;
+    background: url(../images/box-shadow-bottom.png) no-repeat center center;
+    background-size: cover;
+    display: block;
+    content: "";
+}
+
 .radialnav {
     position: absolute;
     left: -63px;
@@ -34371,10 +34384,10 @@ i.icon {
     border-bottom: 2px solid #f7931e;
     transition: display .3s ease;
 }
+
 .r-modal .r-main-box__ribbon .tab-content {
     border-bottom-color: #ff0000;
 }
-
 
 .r-main-box__ribbon .tab-content .gradient {
     height: 40px;
@@ -34603,19 +34616,22 @@ i.icon {
     background: linear-gradient(to bottom, rgba(27, 37, 92, 1) 0%, rgba(53, 72, 179, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1b255c', endColorstr='#3548b3', GradientType=0);
 }
+
 .r-modal .r-main-box__toggle .switch-state {
-    background: rgb(158,158,158);
-background: -moz-linear-gradient(top, rgba(158,158,158,1) 0%, rgba(206,206,206,1) 100%);
-background: -webkit-linear-gradient(top, rgba(158,158,158,1) 0%,rgba(206,206,206,1) 100%);
-background: linear-gradient(to bottom, rgba(158,158,158,1) 0%,rgba(206,206,206,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e9e9e', endColorstr='#cecece',GradientType=0 );
+    background: rgb(158, 158, 158);
+    background: -moz-linear-gradient(top, rgba(158, 158, 158, 1) 0%, rgba(206, 206, 206, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(158, 158, 158, 1) 0%, rgba(206, 206, 206, 1) 100%);
+    background: linear-gradient(to bottom, rgba(158, 158, 158, 1) 0%, rgba(206, 206, 206, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e9e9e', endColorstr='#cecece', GradientType=0);
 }
+
 .r-modal .r-main-box__toggle .switch input:checked+.switch-state {
-    background: rgb(158,158,158);
-background: -moz-linear-gradient(top, rgba(158,158,158,1) 0%, rgba(206,206,206,1) 100%);
-background: -webkit-linear-gradient(top, rgba(158,158,158,1) 0%,rgba(206,206,206,1) 100%);
-background: linear-gradient(to bottom, rgba(158,158,158,1) 0%,rgba(206,206,206,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e9e9e', endColorstr='#cecece',GradientType=0 );}
+    background: rgb(158, 158, 158);
+    background: -moz-linear-gradient(top, rgba(158, 158, 158, 1) 0%, rgba(206, 206, 206, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(158, 158, 158, 1) 0%, rgba(206, 206, 206, 1) 100%);
+    background: linear-gradient(to bottom, rgba(158, 158, 158, 1) 0%, rgba(206, 206, 206, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e9e9e', endColorstr='#cecece', GradientType=0);
+}
 
 .r-main-box__toggle .switch-state:before {
     content: "|";
@@ -34719,12 +34735,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e9e9e', end
     background-color: #3c72f5;
 }
 
-/*
+.r-main-box .dx-g-bs4-paging-panel {
+    background-color: transparent;
+    display: flex;
+    justify-content: space-around;
+}
 
+.r-main-box .dx-g-bs4-paging-panel div:nth-child(1) {
+    order: 4
+}
 
-  .r-main-box .dx-g-bs4-paging-panel{
-      border-radius: 0 0 30px 30px;
-  } */
+.r-main-box .dx-g-bs4-paging-panel div:nth-child(2) {
+    order: 1
+}
 
 .dx-g-bs4-toolbar .popover {
     left: 20px!important;
